2009-04-17  Vivien Malerba <malerba@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: fix for bug #578748
	* libgda/thread-wrapper/gda-thread-wrapper.c: don't attempt to create a GdaThreadWrapper
	object if g_thread_supported() is FALSE
	* libgda/thread-wrapper/Makefile.am:
	* libgda/thread-wrapper/gda-thread-meta.[ch]: meta data retreival implementation
	* libgda/thread-wrapper/gda-thread-provider.[ch]:
	  - reuse the same GdaThreadWrapper object for providers which can only be
	    accessed from a single thread
	  - correctly behave when g_thread_supported() is FALSE
	  - use new implementation of meta data retreival
	* libgda/gda-server-provider.c: doc. correction
	* libgda/gda-connection.c:
	  - removed debug message
	  - corrected locking in gda_connection_update_meta_store()
	  - return an error if the GDA_CONNECTION_OPTIONS_THREAD_SAFE flag is specified
	    but g_thread_supported() is FALSE
	  - gda_connection_update_meta_store()'s implementation is now generic (no specific
	    implementation for connections which use a thread wrapper)
	* tools/gda-sql.c:
	  - use the GDA_CONNECTION_OPTIONS_THREAD_SAFE flag when opening connections
	  - meta data retreival is now done in the background (statements can be executed
	    while it is being done)
	* libgda/Makefile.am:
	* libgda/libgda.symbols:
	* libgda/gda-repetitive-statement.[ch]: new object to prepare the execution of
	a statement with several differents variables' values sets
	* libgda/gda-connection.c: added gda_connection_repetitive_statement_execute()
	* doc/C: doc.update
	* configure.in: a system installed SQLite is now only searched for if the
	--enable-system-sqlite option is passed, and the presence of the sqlite3CreateFunc
	symbol is not anymore required. The only drawback of using a system installed
	SQLite is that meta data regarding functions will not be available
	* Makefile.am:
	* samples/MetaStore/background.c: